third part fixing errors